<resources>
    <string name="app_name">Fitness Comrade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_myWorkouts">My workouts</string>
    <string name="title_addWorkout">Add workout</string>
    <string name="title_workouts">Workouts</string>
    <string name="input_exercise_name">Exercise name</string>
    <string name="input_reps">Repetitions</string>
    <string name="title_workout">Workout</string>
    <string name="title_loginEmail">Email</string>
    <string name="title_loginPassword">Password</string>
    <string name="title_registerName">Name</string>
    <string name="title_loginButton">Login</string>
    <string name="title_registerButton">Register</string>
</resources>