<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_myWorkouts">

    <fragment
        android:id="@+id/navigation_myWorkouts"
        android:name="com.example.fitnesscomrade.myWorkouts"
        android:label="@string/title_myWorkouts"
        tools:layout="@layout/fragment_my_workouts" />

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.example.fitnesscomrade.workouts"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/navigation_addWorkout"
        android:name="com.example.fitnesscomrade.addWorkout"
        android:label="@string/title_addWorkout"
        tools:layout="@layout/fragment_add_workout" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.fitnesscomrade.workout"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.fitnesscomrade.Timer"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_timer" />

</navigation>
